@@ -4,7 +4,9 @@ The "#99999" numbers are Subversion revision numbers.
 Current svn repository
 ======================
 
- o #14913 Refactored common CORBA classes to org.xmlBlaster.util package
+ o #14916 Admin-commands: Removed deprecated getNumSubscriptions and getSubscriptionList
+
+ o #14914 Refactored common CORBA classes to org.xmlBlaster.util package
 
  o #14909 Cluster fixes
    - Setting retries=-1 as a default for remote cluster login
